updated project section

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -91,3 +91,9 @@
   /* width: 310px; */
   height: 233px !important;
 }
+
+/* project start */
+.rn-portfolio {
+  width: 100%;
+}
+/* project end */
