updated header, experience & added cv

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -97,3 +97,10 @@
   width: 100%;
 }
 /* project end */
+
+/* what I do start */
+.icon img {
+  width: 50px;
+  height: 50px;
+}
+/* what I do end */
