--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,62 @@
+/********************** custom cursor with following trail--start **********************/
+
+#cursor {
+  position: fixed;
+  z-index: 99;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  will-change: transform;
+  mix-blend-mode: difference;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .cursor__circle {
+    width: 64px;
+    height: 64px;
+    margin-top: -50%;
+    margin-left: -50%;
+    border-radius: 50%;
+    border: solid 1px rgba(227, 222, 193, 0.64);
+    transition: opacity 0.3s cubic-bezier(0.25, 1, 0.5, 1),
+      background-color 0.3s cubic-bezier(0.25, 1, 0.5, 1),
+      border-color 0.3s cubic-bezier(0.25, 1, 0.5, 1),
+      width 0.3s cubic-bezier(0.25, 1, 0.5, 1),
+      height 0.3s cubic-bezier(0.25, 1, 0.5, 1);
+  }
+
+  #cursor.arrow .cursor__circle {
+    width: 128px;
+    height: 128px;
+    background-color: #ffffff41;
+    border-color: #ffffffa2;
+  }
+
+  #cursor.arrow::after {
+    content: "";
+    position: absolute;
+    left: -50%;
+    top: -50%;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  #cursor.subtle .cursor__circle {
+    opacity: 0.16;
+  }
+
+  #cursor.overlay .cursor__circle {
+    width: 48px;
+    height: 48px;
+    background-color: rgba(227, 222, 193, 0.08);
+    border-color: transparent;
+  }
+}
+
+/********************** custom cursor with following trail--end **********************/
+
 .social-share li a img {
   width: auto;
   height: 41px;
@@ -104,3 +163,16 @@
   height: 50px;
 }
 /* what I do end */
+
+/* skill start */
+.skill-share-inner .button-group .rn-btn {
+  margin: 5px;
+  font-size: 16px;
+  padding: 10px 23px !important;
+}
+.skill-share-inner .button-group .rn-btn img {
+  margin-right: 5px;
+  width: 28px;
+  /* height: 28px; */
+}
+/* skill end */
