--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,10 @@
 .font-size-17 {
   font-size: 17px !important;
 }
+.subheading {
+  font-family: var(--font-stylish);
+  /* text-decoration: underline 7px rgba(255, 255, 255, 0.219); */
+}
 
 /********************** custom cursor with following trail--start **********************/
 
