--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11538,7 +11538,8 @@ button.rn-btn.thumbs-icon svg {
 }
 .breadcrumb-style-one .breadcrumb-inner {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  justify-content: center;
   align-items: center;
 }
 .breadcrumb-style-one .breadcrumb-inner .title {
