--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14198,8 +14198,8 @@ div#featured-project-carousel {
   padding: 30px;
   box-shadow: var(--shadow-1);
   border-radius: 10px;
-  margin: 40px auto 0;
-  width: 90%;
+  margin: 40px 0px 40px 0px;
+  width: 100%;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .experience-style-two {
